@@ -1,4 +1,5 @@
 Changes for 1.3.6
+   Save/restore window size
    Better MD3_PATH handling
       Get MD3_PATH from skins as well as model header
       Allow separate MD3_PATH for each skin
